// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KvLink (unit tests) when label and subtitle is provided should match the snapshot 1`] = `
<kv-link label="Hello" subtitle="World">
  <template shadowrootmode="open">
    <div class="link-container" part="container">
      <a class="label" part="label" tabindex="0">
        <slot name="left"></slot>
        Hello
        <slot name="right"></slot>
      </a>
      <div class="subtitle">
        World
      </div>
    </div>
  </template>
</kv-link>
`;

exports[`KvLink (unit tests) when only label is provided should match the snapshot 1`] = `
<kv-link label="Hello">
  <template shadowrootmode="open">
    <div class="link-container" part="container">
      <a class="label" part="label" tabindex="0">
        <slot name="left"></slot>
        Hello
        <slot name="right"></slot>
      </a>
    </div>
  </template>
</kv-link>
`;
